--- a/config.json
+++ b/config.json
@@ -4,7 +4,11 @@
     "icon": "data/icon.ico",
     "bundle_icon": "data/icon.icns",
     "bundle_identifier": "com.niklasrosenstein.c4dinstaller",
-    "banner": "data/banner.png"
+    "banner": {
+      "left": "data/banner_left.png",
+      "fill": "data/banner_fill.png",
+      "right": "data/banner_right.png"
+    }
   },
   "text": {
     "title": "Cinema 4D Plugin Installer",
