add a 'palette' field to the configuration

--- a/data/config.json
+++ b/data/config.json
@@ -3,6 +3,13 @@
     "name": "C4DPluginInstaller",
     "bundle_identifier": "com.niklasrosenstein.c4dinstaller"
   },
+  "palette": {
+    "background": [40, 40, 40],
+    "foreground": [200, 200, 200],
+    "alternate_background": [70, 70, 70],
+    "button_background": [50, 50, 50],
+    "button_foreground": [220, 220, 220]
+  },
   "features": {
     "!plugin": "$plugin",
     "docs": "$documentation",
