on installation undo, implement removal of created directories. Support installed_files_list configuration parameter (close #3)

--- a/data/config.json
+++ b/data/config.json
@@ -25,5 +25,7 @@
     "presets": {
       "$src/library/": "$c4d/library/"
     }
-  }
+  },
+  "installed_files_list": "$c4d/plugins/C4DInstaller_ExamplePlugin/installed-files.txt",
+  "install_slowdown": null
 }
