implement Install Page button behaviour (close #4)

--- a/data/config.json
+++ b/data/config.json
@@ -27,5 +27,5 @@
     }
   },
   "installed_files_list": "$c4d/plugins/C4DInstaller_ExamplePlugin/installed-files.txt",
-  "install_slowdown": null
+  "install_slowdown": 0.2
 }
