support for release notes checkbox on End screen, show error dialog now when installation fails

--- a/data/config.json
+++ b/data/config.json
@@ -9,6 +9,10 @@
     "name": "uninstall",
     "bundle_identifier": "com.niklasrosenstein.c4dinstaller_uninstaller"
   },
+  "readme": {
+    "enabled": true,
+    "file": "data/readme.pdf"
+  },
   "palette": {
     "background": [40, 40, 40],
     "foreground": [200, 200, 200],
